--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "Work Sans", Arial, sans-serif, "Times New Roman";
+  font-family: "Work Sans", Arial, sans-serif, "Times New Roman", 'satista';
   font-weight: 400;
   margin: 0 0 20px 0;
 }
