--- a/css/style.css
+++ b/css/style.css
@@ -1922,7 +1922,7 @@ form label {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  /* background: rgba(0, 0, 0, 0.5); */
 }
 .slideshow .slide .image {
   width: 100%;
