--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+ }
+
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
@@ -1006,6 +1010,7 @@ form label {
 #fh5co-couple-story,
 #fh5co-couple,
 #fh5co-gallery,
+#one,
 .fh5co-section {
   padding: 7em 0;
   clear: both;
