--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
- }
-
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
@@ -946,22 +942,23 @@ form label {
 
 .simply-countdown {
   /* The countdown */
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 .simply-countdown > .simply-section {
   /* coutndown blocks */
   display: inline-block;
-  width: 100px;
-  height: 100px;
-  background: rgba(241, 78, 149, 0.8);
-  margin: 0 4px;
+  width: 60px;
+  height: 60px;
+  /* background: rgba(241, 78, 149, 0.8); */
+  /* background: #eefff2; */
+  margin: 0 5px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
   position: relative;
-  animation: pulse 1s ease infinite;
+  /* animation: pulse 2s ease infinite; */
 }
 
 @keyframes pulse {
@@ -1010,7 +1007,6 @@ form label {
 #fh5co-couple-story,
 #fh5co-couple,
 #fh5co-gallery,
-#one,
 .fh5co-section {
   padding: 7em 0;
   clear: both;
@@ -2039,3 +2035,9 @@ form label {
   fill: #fff;
   transition: left 0.2s ease;
 }
+
+/* img{
+  width:100%;
+  height:100%;
+  object-fit: contain;
+} */
